--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/typography.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Comfortaa|Gravitas+One|Open+Sans:300,400,400i,600,700|Rammetto+One" rel="stylesheet">
 
 </head>
 <body>
