--- a/index.html
+++ b/index.html
@@ -5,35 +5,34 @@
   <title>Trendy Fruit</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/grid.css" rel="stylesheet">
-  <link href="css/typography.css" rel="stylesheet">
+  <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Comfortaa|Gravitas+One|Open+Sans:300,400,400i,600,700|Rammetto+One" rel="stylesheet">
 </head>
 <body>
 
-  <div class="grid">
-    <header class="unit [ xs-1 s-1 m-1 l-1 xl-1 ] ">
-      <h1>Watermelon</h1>
-    </header>
-    <p class="unit [ xs-1 s-1 m-1 l-1 xl-1 ] ">
-      Watermelons are a sweet, popular fruit of summer, usually consumed fresh in slices. The rind of the fruit is mid- to dark green and usually mottled or striped, and the flesh can be red or pink (most commonly), orange, yellow, green or white.
-    </p>
+  <main class="pad-t-1-2">
+    <article class="watermelon pad-t-2 pad-b-2 push-1-2">
+      <div class="max-length gutter-1-2">
+        <h1 class="push-0 tena">Watermelon</h1>
+        <p class="giga push-0">Watermelons are a sweet, popular fruit of summer, usually consumed fresh in slices. The rind of the fruit is mid- to dark green and usually mottled or striped, and the flesh can be red or pink (most commonly), orange, yellow, green or white.</p>
+      </div>
+    </article>
 
-    <div class="unit [ xs-1 s-1 m-1 l-1 xl-1 ] ">
-      <h2>Starfruit</h2>
-      <p>
-        The fruit has distinctive ridges running down its sides (usually five but can sometimes vary); when cut in cross-section, it resembles a star, hence its name. The entire fruit is edible and is usually eaten out of hand.
-      </p>
-    </div>
+    <article class="starfruit pad-t-2 pad-b-2 push-1-2">
+      <div class="max-length gutter-1-2">
+        <h2 class="push-0 tena pad-t-1-8">Starfruit</h2>
+        <p class="giga push-0">The fruit has distinctive ridges running down its sides (usually five but can sometimes vary); when cut in cross-section, it resembles a star, hence its name. The entire fruit is edible and is usually eaten out of hand.</p>
+      </div>
+    </article>
 
-    <div class="unit [ xs-1 s-1 m-1 l-1 xl-1 ] ">
-      <h2>Persimmon</h2>
-      <p class="unit [ xs-1 s-1 m-1 l-1 xl-1 ] ">
-        The non-astringent persimmon is squat like a tomato and is most commonly sold as <i>fuyu</i>. The ripe fruit of the cultivated strains range from glossy light yellow-orange to dark red-orange depending on the species and variety.
-      </p>
-    </div>
-
-
+    <article class="persimmon pad-t-2 pad-b-2 push-1-2">
+      <div class="max-length gutter-1-2">
+        <h3 class="push-0 tena pad-t-1-8">Persimmon</h3>
+        <p class="giga push-0">The non-astringent persimmon is squat like a tomato and is most commonly sold as <i>fuyu</i>. The ripe fruit of the cultivated strains range from glossy light yellow-orange to dark red-orange depending on the species and variety.</p>
+      </div>
+    </article>
+  </main>
 
 </body>
 </html>
